--- a/my-app-redux/src/App.css
+++ b/my-app-redux/src/App.css
@@ -147,7 +147,7 @@ body.light {
 
 .coracao {
   width: 100px;
-  height: 85px;
+  height: 8px;
   position: relative;
   transform: rotate(135deg);
   animation: batimento 1s ease-in-out infinite;
@@ -156,8 +156,8 @@ body.light {
 .coracao:before,
 .coracao:after {
   content: "";
-  width: 56px;
-  height: 79px;
+  width: 50px;
+  height: 50px;
   background: red;
   position: absolute;
   transform: rotate(-4deg);
@@ -170,11 +170,11 @@ body.light {
 }
 
 .coracao:after {
-  top: 34px;
-  left: 10;
-  width: 48px;
-  height: 35px;
-  transform: rotate(85deg);
+  top: 25px;
+  left: 12px;
+  width: 50px;
+  height: 80px;
+  transform: rotate(98deg);
 
 }
 
@@ -263,18 +263,18 @@ body.night-page::after {
 
 
 .night-page {
-  position: relative;
-  background-color: #0c2340;
+  /* position: relative; */
+  background-color: #030303;
 }
 
 .moon
 {
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 200px;
-  height: 150px;
+  width: 250px;
+  height: 170px;
   background-image: url('./Image/lua.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -283,3 +283,88 @@ body.night-page::after {
 }
 
 
+.noite {
+  width: 100px;
+  height: 85px;
+  position: relative;
+  transform: rotate(135deg);
+  animation: batimento 1s ease-in-out infinite;
+  
+}
+
+.noite:before,
+.noite:after {
+  content: "";
+  width: 56px;
+  height: 79px;
+  background: rgb(102, 101, 101);
+  position: absolute;
+  transform: rotate(-4deg);
+  border-radius: 25px 25px 0 0;
+  
+}
+
+.noite:before {
+  top: 0;
+  left: 0;
+}
+
+.noite:after {
+  top: 34px;
+  left: 10;
+  width: 48px;
+  height: 35px;
+  transform: rotate(85deg);
+  
+
+}
+
+@keyframes batimento {
+  0% {
+    transform: scale(1) rotate(-45deg);
+  }
+  20% {
+    transform: scale(0.9) rotate(-45deg);
+  }
+  40% {
+    transform: scale(1) rotate(-45deg);
+  }
+  60% {
+    transform: scale(0.9) rotate(-45deg);
+  }
+  80% {
+    transform: scale(1) rotate(-45deg);
+  }
+  100% {
+    transform: scale(1) rotate(-45deg);
+  }
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  /* top: 100% */
+
+  
+}
+
+/* .carousel .container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.carousel img {
+  max-height: 400px;
+  object-fit: cover;
+} */
