--- a/my-app-redux/src/App.css
+++ b/my-app-redux/src/App.css
@@ -12,7 +12,58 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 120vh;
+  border-radius: 50%;
+  position: relative;
+  background-image: url('./Image/imag0.jpeg');
+}
+/* .container::before
+.container:after{
+content: '';
+position:absolute;
+border-radius: inherit;
+} */
+/* .container:before{
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(0deg, #2cd9ff 0%,
+  #7effb2 100%) ;
+  animation: spin .5s infinite linear;
+} */
+/* .container:after{
+background-color: #090909;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+} */
+/* @keyframes spin {
+  to{
+    transform: rotate(360deg);
+  }
+} */
+.darkmode {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 
+.login {
+  display: flex;
+  height: 30px;
+  width: 300px;
+  justify-content: center;
+  text-align: center;
+}
+
+.fonte{
+  position:relative;
+  
+}
 /* .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -170,7 +221,7 @@ body.light {
 }
 
 .coracao:after {
-  top: 25px;
+  top: 20px;
   left: 12px;
   width: 50px;
   height: 80px;
@@ -350,7 +401,7 @@ body.night-page::after {
 
 }
 
-.container {
+.container2 {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -359,12 +410,15 @@ body.night-page::after {
   
 }
 
-/* .carousel .container {
-  max-width: 800px;
+.carousel .container2 {
+  max-width: 700px;
   margin: 0 auto;
+  /* padding: 10%; */
+  
 }
 
 .carousel img {
-  max-height: 400px;
+  max-height: 2500px;
   object-fit: cover;
-} */
+  /* object-position: center bottom; */
+}
