--- a/my-app-redux/src/App.css
+++ b/my-app-redux/src/App.css
@@ -157,49 +157,10 @@ body.light {
   color: black !important;
 }
 
-/* 
-.login-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #282c34;
-}
-
-.login-form {
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-}
-
-.login-form input {
-  margin-bottom: 10px;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-}
-
-.login-form button {
-  background-color: #61dafb;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  color: #fff;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.login-form button:hover {
-  background-color: #5ba6cb;
-} */
 
 .coracao {
   width: 100px;
   height: 8px;
-  position: relative;
   transform: rotate(135deg);
   animation: batimento 1s ease-in-out infinite;
 }
@@ -251,71 +212,10 @@ body.light {
 }
 
 
-/**/
-
-/* noite.css */
-
-/* body.noite {
-  background: #000000;
-}
-
-body.noite::before, body.noite::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url('./Image/coração.gif');
-  animation: piscar 1s ease-in-out infinite;
-}
-
-body.noite::before {
-  z-index: -1;
-}
-
-body.noite::after {
-  z-index: -2;
-}
-
-@keyframes piscar {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-
-body.night-page::before,
-body.night-page::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url('./Image/coração.gif');
-  animation: piscar 1s ease-in-out infinite;
-  background-position: center 100px;
-}
-
-body.night-page::before {
-  z-index: -1;
-}
-
-body.night-page::after {
-  z-index: -2;
-} */
-
 
 .night-page {
   /* position: relative; */
-  background-color: #030303;
+  background-color: #755656;
 }
 
 .moon
@@ -334,70 +234,44 @@ body.night-page::after {
 }
 
 
-.noite {
-  width: 100px;
-  height: 85px;
-  position: relative;
-  transform: rotate(135deg);
-  animation: batimento 1s ease-in-out infinite;
-  
+.test {
+position:relative;
+width:80px;
+height: 80px;
+border-radius: 50%;
 }
 
-.noite:before,
-.noite:after {
+.test::before,
+.test:after {
   content: "";
-  width: 56px;
-  height: 79px;
-  background: rgb(102, 101, 101);
   position: absolute;
-  transform: rotate(-4deg);
-  border-radius: 25px 25px 0 0;
-  
+  border-radius: inherit;
+ 
 }
 
-.noite:before {
-  top: 0;
-  left: 0;
+.test:before {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    0deg, #2CD9FF 0%,
+  #7EFFB2 100%);
+  animation: spin .5s infinite linear;
 }
 
 .noite:after {
-  top: 34px;
-  left: 10;
-  width: 48px;
-  height: 35px;
-  transform: rotate(85deg);
-  
+width: 85%;
+height: 85%;
+background-color: #ad3c3c;
+top:50%;
+left: 50%;
+transform: translate( -50%, -50%);
 
 }
 
-@keyframes batimento {
-  0% {
-    transform: scale(1) rotate(-45deg);
-  }
-  20% {
-    transform: scale(0.9) rotate(-45deg);
-  }
-  40% {
-    transform: scale(1) rotate(-45deg);
-  }
-  60% {
-    transform: scale(0.9) rotate(-45deg);
-  }
-  80% {
-    transform: scale(1) rotate(-45deg);
-  }
-  100% {
-    transform: scale(1) rotate(-45deg);
-  }
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+@keyframes spin {
+to{
+  transform: rotate(360deg);
+}  
 
 }
 
