--- a/my-app-redux/src/services/Style.css
+++ b/my-app-redux/src/services/Style.css
@@ -121,21 +121,27 @@
     color: var(--white);
   } */
   
-  body {
-    background-color: #fff;
-    color: #000;
-  }
-  :root {
-    --background-color: #fff;
-    --text-color: #000;
-  }
-  
-  body {
-    background-color: var(--background-color);
-    color: var(--text-color);
-  }
-    
+body {
+  --background-color: #fff;
+  --text-color: #000;
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
 
-  .text{
-    background-color: #000;
-  }
+
+
+.container3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column ;
+}
+
+.xablau {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  height: 100vh;
+
+}
